updated about page

--- a/about.Rmd
+++ b/about.Rmd
@@ -7,3 +7,5 @@ description: |
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+This site is currently under construction, as evidenced by the broken Posts page. I am working on getting that fixed.
