edited photo in post

--- a/_posts/2023-03-05-working-out-the-bugs/working-out-the-bugs.Rmd
+++ b/_posts/2023-03-05-working-out-the-bugs/working-out-the-bugs.Rmd
@@ -22,7 +22,7 @@ This is a test post to check out creating and posting blog posts on the site. I 
 Here is the photo :)
 
 ```{r}
-knitr::include_graphics("DJI_0334 (Small).jpg")
+knitr::include_graphics("DJI_0334.jpg")
 ```
 
 Now I'm going to try and embed some R code.
